# screen-inspector

./: Cargo.toml  README.md
src/: browser.rs  darwin.rs  device.rs  lib.rs  linux.rs  main.rs  mouse.rs  snss.rs  types.rs  utils.rs  window.rs  windows.rs
src/browser/: browser.rs  chromium.rs  mod.rs
src/native_app/: darwin.rs  linux.rs  mod.rs  windows.rs
src/watcher/: afk.rs  mod.rs  window.rs
