[package]
name = "tpulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.1"
dotenv = "0.15.0"
chrono = "0.4.31"
device_query = "1.1.3"
ureq = "2.9.0"
regex = "1.10.2"
anyhow = "1.0.77"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
