[package]
name = "screen-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.3"
regex = "1.10.2"
anyhow = "1.0.77"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_System_Threading",
] }
