[package]
name = "screen-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "screen_inspector"

[dependencies]
regex = "1.11.1"
anyhow = "1.0.95"
device_query = "2.1.0"
log = "0.4.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_System_Threading",
] }
